apps/llm/base/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: openwebui

spec:
  entryPoints:
    - web
  routes:
    - match: Host(`openwebui.internal`)
      kind: Rule
      services:
        - name: openwebui-open-webui
          port: http
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: searxng

spec:
  entryPoints:
    - web
  routes:
    - match: Host(`searxng.internal`)
      kind: Rule
      services:
        - name: searxng-http
          port: 8080
